# unlimited-ocr

./: .env.example  .gitignore  README.md  RELEASE.md  package.json  phase6_external_verification.ps1  pnpm-lock.yaml
docs/: api.md  architecture.md  ocr-quality-report.md  progress.md  release-checklist.md  setup-windows.md  supported-documents.md  troubleshooting.md  user-guide.md
evaluation/: manifest.json
scripts/: audit_phase6_pages.py  build_phase6_canonical.py  build_phase6_manual_review.py  capture_phase6_manual_review.cjs  check_cuda.py  download_model.py  generate_phase6_fixtures.py  local-lifecycle.ps1  (+17 more)
services/api/: pyproject.toml  requirements.txt
services/api/app/: __init__.py  main.py
services/api/app/api/: jobs.py  maintenance.py  system.py
services/api/app/core/: config.py  errors.py
services/api/app/db/: __init__.py  migrations.py  session.py
services/api/app/models/: __init__.py  job.py  page.py
services/api/app/schemas/: jobs.py  model.py  pages.py  reliability.py  system.py
services/api/app/services/: gpu.py  jobs.py  model.py  pdf.py  phase6_scoring.py  reliability.py  storage.py  validation.py
services/api/app/workers/: __init__.py  ocr.py
services/api/output/: result.json  result.md  result.txt
services/api/tests/: conftest.py  test_config.py  test_jobs_api.py  test_pdf_migration_recovery.py  test_pdf_validation.py  test_pdf_worker.py  test_phase6_scorer.py  test_recovery.py  test_reliability.py  test_system_api.py  test_validation.py
services/api/unlimited_ocr_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+77 files in other folders)
