[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "unlimited-ocr-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "python-dotenv==1.1.1",
  "psutil==7.0.0",
  "SQLAlchemy==2.0.41",
  "python-multipart==0.0.20",
]

[project.optional-dependencies]
test = ["httpx==0.28.1", "pytest==8.4.1"]
ocr = [
  "torch==2.8.0", # verified as 2.8.0+cu129 on RTX 5070
  "torchvision==0.23.0", # verified as 0.23.0+cu129 on RTX 5070
  "transformers==4.57.1",
  "huggingface-hub==0.36.0",
  "safetensors==0.6.2",
  "Pillow==12.1.1",
  "matplotlib==3.10.8",
  "einops==0.8.2",
  "addict==2.4.0",
  "easydict==1.13",
  "PyMuPDF==1.27.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
